# gcenter

./: Cargo.toml  README.md
src/: argparse.rs  center.rs  errors.rs  lib.rs  main.rs  reference.rs
tests/: main.rs
tests/test_files/: complex_with_multiple_references.xtc  index.ndx  index_with_reference.ndx  input.gro  input.pqr  input.tpr  input.trr  input.xtc  input_aa_peptide.gro  input_aa_peptide.pqr  input_aa_peptide.tpr  input_aa_peptide.trr  input_aa_peptide.xtc  input_invalid_box.gro  input_no_velocities.gro  input_nonorthogonal.gro  input_part1.trr  input_part1.xtc  input_part2.trr  input_part2.xtc  input_part3.trr  input_part3.xtc  input_tiny.gro  input_tiny_invalid.gro  input_tiny_nonorthogonal.gro  input_traj.gro  large_aa.tpr  large_aa.xtc  large_aa_whole_expected.gro  large_aa_whole_expected.xtc  output_group.xtc  output_traj_xyz.gro  output_x.gro  output_x.xtc  output_x_com_guessed_begin_end_step.trr  output_xy.gro  output_xy.xtc  output_xy_aa_nocom_rangestep.xtc  output_xy_whole_complex.trr  output_xy_whole_from_tpr.gro  (+50 more)
