[package]
name = "gcenter"
authors = ["Ladislav Bartos <ladmeb@gmail.com>"]
description = "Center Any Group in a Gromacs Trajectory"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
backitup = "0.1.0"
clap = { version = "4.3.0", features = ["derive"] }
colored = "2.0.0"
groan_rs = "0.1.0"
thiserror = "1.0.40"

[dev-dependencies]
assert_cmd = "2.0.11"
file_diff = "1.0.0"
tempfile  = "3.5.0"
glob = "0.3.1"
