[package]
name = "gcenter"
authors = ["Ladislav Bartos <ladmeb@gmail.com>"]
description = "Center Any Group in a Gromacs Trajectory"
version = "1.3.0-dev"
license = "MIT"
edition = "2021"
repository = "https://github.com/Ladme/gcenter"
keywords = ["gromacs", "molecular-dynamics"]
categories = ["command-line-utilities", "science"]
exclude = ["/tests"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
backitup = "0.1.1"
clap = { version = "4.4.3", features = ["derive"] }
colored = "2.0.4"
groan_rs = { path = "../groan_rs" }
thiserror = "1.0.48"

[dev-dependencies]
assert_cmd = "2.0.12"
file_diff = "1.0.0"
tempfile  = "3.8.0"
glob = "0.3.1"
