[package]
name = "gcenter"
authors = ["Ladislav Bartos <ladmeb@gmail.com>"]
description = "Center Any Group in a Gromacs Trajectory"
version = "2.1.0"
license = "MIT"
edition = "2021"
repository = "https://github.com/Ladme/gcenter"
keywords = ["gromacs", "molecular-dynamics"]
categories = ["command-line-utilities", "science"]
exclude = ["/tests"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
backitup = "0.1.1"
clap = { version = "4.5.20", features = ["derive"] }
colored = "2.2.0"
groan_rs = { path = "../groan_rs" }
thiserror = "2.0.8"

[dev-dependencies]
assert_cmd = "2.0.16"
file_diff = "1.0.0"
tempfile = "3.14.0"
glob = "0.3.1"
